# mhcc

./: .editorconfig  .eslintignore  .eslintrc.cjs  .gitignore  lina.ps1  package.json  pnpm-lock.yaml  seed-db.py  svelte.config.js  tailwind.config.cjs  vite.config.js
bin-misc/: change_staff_role.rs  delete_staff.rs  new_staff.rs  new_visitor.rs
db_seeds/: db-dispensers.csv  db-grns.csv  db-sales.csv  db-sales_items.csv  db-staffs.csv  db-stocks.csv  db-visitors.csv
sql/: NOTES.MD  create-table-original.sql  create-table.sql  db-seed.sql  example.rs  insert-records.sql  test
sql-scratch/: create-table.old.sql  create-table.sql  db-seed.sql  search-stocks.sql  select-records.sql  select-stocks.sql  update-records.sql
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20221231073918_create_table_staffs.down.sql  20221231073918_create_table_staffs.up.sql  20221231074012_create_table_dispensers.down.sql  20221231074012_create_table_dispensers.up.sql  20221231074121_create_table_stocks.down.sql  20221231074121_create_table_stocks.up.sql  20221231074342_create_table_grns.down.sql  20221231074342_create_table_grns.up.sql  20221231074507_create_table_patients.down.sql  20221231074507_create_table_patients.up.sql  20221231074626_create_table_sales.up.sql  20221231074750_create_table_sales_items.down.sql  20221231074750_create_table_sales_items.up.sql  20221231084241_bootstrap_searh_tokens.down.sql  20221231084241_bootstrap_searh_tokens.up.sql  20221231084416_create_index_for_FTS.down.sql  20221231084416_create_index_for_FTS.up.sql  20221231084639_create_index_for_stock_date_expiry.down.sql  20221231084639_create_index_for_stock_date_expiry.up.sql  parse_ups.py  parsed_up.sql
src-tauri/migrations/2022-08-10-112926_create_staffs/: down.sql  up.sql
src-tauri/migrations/2022-08-14-094434_create_stocks/: up.sql
src-tauri/migrations/2022-08-14-094441_create_grns/: down.sql  up.sql
src-tauri/migrations/2022-08-14-094451_create_visitors/: up.sql
src-tauri/migrations/2022-08-14-094500_create_sales/: up.sql
src-tauri/migrations/2022-08-14-094508_create_sales_items/: down.sql  up.sql
src-tauri/src/: adapters.rs  db.rs  grns.rs  lib.rs  main.rs  models.rs  ports.rs  schema.rs
src-tauri/src/dispensers/: impls.rs  models.rs
src-tauri/src/patients/: impls.rs  models.rs
src-tauri/src/stocks/: impls.rs  mod.rs  models.rs  state.rs
src-tauri/tests/: test_stock_pgadapter.rs
src/css/: app.css
src/lib/components/: AddNewItemButton.svelte  AddNewItemOverlay.svelte  DeleteModalChild.svelte  EditableTableCell.svelte  GRNModal.svelte  Modal.svelte  Notification.svelte  PageHeader.svelte  SidebarItem.svelte  TransitionPage.svelte
src/lib/models/: BaseModels.ts  PatientModels.ts  StockModels.ts
src/lib/stores/: AddNewItemStore.ts  ModalStore.ts
src/lib/table/: ButtonsCell.svelte  EditableCellLabel.ts  EditableTableCell.svelte
src/lib/types/: NotificationType.ts  OverviewAnalyticsItemType.ts  SidebarItemType.ts
src/lib/utils/: indicators.ts  search.ts
src/routes/: +layout.svelte  +page.svelte  layout.old.svelte  page.old.svelte
src/routes/instruments/: +page.svelte
src/routes/notifications/: +page.svelte
src/routes/patients/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/stocks/: +page.svelte  data.js
src/routes/visitors/: +page.svelte
