[package]
name = "mhcc"
version = "0.2.0"
description = "Mathagal Health Care Center"
authors = ["BirnadinErick"]
license = "Private"
repository = ""
default-run = "mhcc"
edition = "2021"
rust-version = "1.63"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0", features = ["system-tray"] }
dotenvy = "0.15"
tokio = { version = "1.20", features = ["full"] }
chrono = { version = "0.4.22", features = ["serde"] }
sqlx = {version="0.6", features = ["runtime-tokio-native-tls" , "postgres", "chrono", "bigdecimal"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]

# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
