[package]
name = "mhcc"
version = "0.3.0"
description = "Mathagal Health Care Center"
authors = ["BirnadinErick"]
license = "Private"
repository = ""
default-run = "mhcc"
edition = "2021"
rust-version = "1.63"

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0", features = ["system-tray"] }
dotenvy = "0.15"
tokio = { version = "1.20", features = ["full"] }
chrono = { version = "0.4.22", features = ["serde"] }
sqlx = {version="0.6", features = ["runtime-tokio-native-tls" , "postgres", "chrono", "bigdecimal"] }
async-trait = "0.1.60"

[dev-dependencies]
pretty_assertions = "1.3.0"
mockall = "0.11.3"
sqlx-database-tester = [version = "0.4.2", features = ["runtime-tokio"]]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
