[package]
name = "mhcc"
version = "3.5.0"
description = "Mathagal Health Care Center Management App"
authors = ["BirnadinErick"]
license = "Proprietary"
repository = "https://github.com/BirnadinErick/mhcc"
default-run = "mhcc"
edition = "2021"
rust-version = "1.66"

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0", features = ["system-tray"] }
dotenvy = "0.15"
tokio = { version = "1.24", features = ["full"] }
chrono = { version = "0.4.22", features = ["serde"] }
sqlx = {version="0.6", features = ["runtime-tokio-rustls" , "postgres", "chrono", "bigdecimal"] }
async-trait = "0.1.60"

[dev-dependencies]
pretty_assertions = "1.3.0"
mockall = "0.11.3"
sqlx-database-tester = {version = "0.4.2", features = ["runtime-tokio"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 256
panic = "abort"

[profile.release]
opt-level = 3
debug = 0
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = "fat"
incremental = false
codegen-units = 1
panic = "unwind"
